[main]: Fixed some typos in TripFinder